--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=img, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MotivationMantra</title>
     <link rel="stylesheet" href="styling.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 
-<body>
-    <div class="main">
-        <img class="image" src="https://zenquotes.io/api/image" alt="" srcset="">
+<body onload="loadQuote()">
+    <div id="main">
+        <span id="listen" class="material-symbols-outlined" onclick="listen()">
+            volume_up
+        </span>
+        <div id="quote-space">
+            <div class="quote">
+                <p id="quoteLine">
+                </p>
+                <p id="author">
+                </p>
+            </div>
+        </div>
+        <button id="next" onclick="loadQuote()"> next quote </button>
+        <button id="copy" onclick="copyQuote()"> copy </button>
     </div>
-    <button onclick="location.reload()">Need more motivation?</button>
 </body>
 </html>
